# delete-ecs-clusters-rs

./: .env.example  Cargo.toml  README.md  regions.txt
src/: lib.rs  main.rs
